# openfoam-tank-mesh

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
examples/: cylinder_caps.py
examples/system/: controlDict
openfoam_tank_mesh/: CylinderTank.py  KSiteMesh.py  KSiteTank.py  NASA1m3Mesh.py  NASA1m3Tank.py  Profile.py  SphericalTank.py  Tank.py  TankMesh.py  TwoPhaseMesh.py  TwoPhaseTankMesh.py  __init__.py  exceptions.py  mesh_builders.py  mesh_pipeline.py
openfoam_tank_mesh/dicts/KSite/: createPatchDict.cfMesh  createPatchDict.cfMeshNonConformal  meshDict  refineMeshDict.refineBottom  refineMeshDict.refineTangential  topoSetDict.createFinalFaceSets  topoSetDict.gmsh
openfoam_tank_mesh/dicts/NASA1m3/: createPatchDict.cfMesh  createPatchDict.gmsh_wedge  meshDict  meshdata  rotationDict
openfoam_tank_mesh/dicts/cylindrical_tanks/: createNonConformalCouplesDict  createPatchDict.cfMesh  createPatchDict.cfMeshNonConformal  createPatchDict.gmsh  createPatchDict.gmsh_wedge  createPatchDict.pipe2outlet  extrudeMeshDict  extrudeMeshDict.addWall  extrudeMeshDict.outlet  meshDict  meshdata  topoSetDict.addWall  topoSetDict.createFinalFaceSets  topoSetDict.createOutlet  topoSetDict.gmsh  topoSetDict.outletPipe  topoSetDict.pipe2outlet  topoSetDict.refineBottom  topoSetDict.smoothing  topoSetDict.subsetMesh
openfoam_tank_mesh/dicts/two_phase_tanks/: createPatchDict.gmshRevolve  createPatchDict.gmsh_empty  createPatchDict.metal_patches  createPatchDict.pipe2outlet  extrudeMeshDict.addWall  extrudeMeshDict.cylinder  laplacianSmoothDict  meshDict  meshdata  mirrorMeshDict  snappyHexMeshDict  topoSetDict.add_wall_thickness  topoSetDict.createFlange  topoSetDict.gmsh  topoSetDict.gmsh_empty  topoSetDict.metal_patches  topoSetDict.obstacle  topoSetDict.pipe2outlet  topoSetDict.removeOutletFluidOnly  topoSetDict.removeWallOutlet  (+3 more)
openfoam_tank_mesh/gmsh_scripts/: ksite49.py  ksite83.py  ksite83_internal_outlet.py  ksite_wip.py  stl.py  two_phase.py  two_phase_alt.py  utilities.py
tests/: KSite49.msh.REMOVED.git-id  gmsh_2D.msh  gmsh_transfinite_tri.py  parameters  test_cylinder_caps_mesh.py  test_cylinder_mesh.py  test_cylinder_tank.py  test_foo.py  test_ksite_mesh.py  test_nasa1m3_mesh.py  test_profile.py  test_smoothing.py  test_sphere_mesh.py  test_spherical_tank.py  test_tankmesh_core.py  visualize_tank.py
tests/system/: GasPhase3D_data  TwoPhase2D_data  blockMeshDict  blockMeshDict.GasPhase3D  blockMeshDict.TwoPhase2D  collapseDict  createNonConformalCouplesDict  createPatchDict.cfMesh  extrudeMeshDict  fvSchemes  fvSolution  laplacianSmoothDict  meshDict  meshDict.InternalOutlet  meshdata  mirrorMeshDict  refineMeshDict  snappyHexMeshDict  topoSetDict  topoSetDict.smoothing  topoSetDict.subsetMesh
(+65 files in other folders)
